# githubot

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  githubot.py  run.py  setup.cfg  setup.py
githubot/: config.py  file.py  githubot.py  release.py
