[metadata]
name = githubot
author = wqy
author_email = qiyingwangwqy@gmail.com
description = Command line tool to use Github API to automate some works.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/WqyJh/githubot
keywords = github, ci
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3 :: Only


[options]
include_package_data = True
packages = find:


[options.package_data]
* = *.txt, *.rst, *.md
